src/generic/generic-component-dialog/generic-component-dialog.scss
/**
 * Dialog
 * @define dialog
 */

// Import base
@import '@ecl/generic-base/generic-base';

@mixin ecl-dialog() {
  .ecl-dialog {
    background-color: #fff;
    box-sizing: border-box;
    display: flex;
    height: 100%;
    left: 0;
    margin: 0;
    padding: map-get($ecl-spacing, 'l');
    position: fixed;
    top: 0%;
    width: 100%;
    z-index: map-get($ecl-z-index, 'modal');
  }

  .ecl-dialog--transparent {
    background-color: transparent;
  }

  .ecl-dialog[aria-hidden='true'] {
    display: none;
  }

  .ecl-dialog__body {
    max-height: 100%;
    overflow: auto;
  }

  .ecl-dialog__overlay {
    background-color: rgba(0, 0, 0, 0.7);
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: map-get($ecl-z-index, 'modal') - 1;
  }

  .ecl-dialog__overlay[aria-hidden='true'] {
    display: none;
  }

  .ecl-dialog__overlay--blue {
    background-color: rgba($ecl-color-primary, 0.95);
  }

  .ecl-dialog--wide .ecl-dialog__body {
    overflow: visible;
    width: 100%;
  }

  .ecl-dialog__dismiss {
    @include ecl-focus-outline-border(
      $thicknes: 3px,
      $color: map-get($ecl-colors, 'yellow-100'),
      $offset: 3px
    );

    background: transparent url($ecl-assets-path+'images/close.svg') no-repeat
      center center;
    border-width: 0;
    color: transparent;
    display: block;
    font-size: map-get($ecl-font-size, 'xxl');
    line-height: map-get($ecl-font-size, 'l');
    padding: 0;
    position: absolute;
    right: map-get($ecl-spacing, 'xxs');
    text-decoration: none;
    text-shadow: none;
    top: map-get($ecl-spacing, 'xxs');

    &:hover {
      background-image: url($ecl-assets-path+'images/close_hover.svg');
    }
  }

  .ecl-dialog__dismiss--inverted {
    background-image: none;
    color: #fff;
    cursor: pointer;
    font-size: 0.889em;
    text-decoration: underline;

    &::after {
      align-items: center;
      border: 1px solid #fff;
      border-radius: 50%;
      box-sizing: border-box;
      content: '\00D7';
      display: flex;
      float: right;
      height: 1.5em;
      justify-content: center;
      margin-left: 0.5em;
      width: 1.5em;
    }

    &:hover {
      background-image: none;
    }
  }

  .ecl-dialog__title {
    clear: both;
    color: #fff;
    font-size: map-get($ecl-font-size, 'l');
    margin: 0;
    padding: map-get($ecl-spacing, 'l') 0;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('sm') {
    .ecl-dialog {
      height: auto;
      left: 50%;
      max-height: 100%;
      max-width: 100%;
      top: 50%;
      transform: translate(-50%, -50%);
      width: auto;
    }

    .ecl-dialog--wide {
      height: 100%;
      left: 0;
      overflow: auto;
      right: 0;
      top: 0;
      transform: none;
    }
  }
}

